# OpenTourProduct

./: .env  Cargo.toml  README.md  Rocket.toml
migrations/2020-05-29-233635_first/: down.sql  up.sql
src/: db.rs  lib.rs  main.rs  schema.rs
src/controller/: mod.rs  tourcontroller.rs
src/handlers/: mod.rs  tours.rs
src/model/: mod.rs  tour.rs
src/repository/: mod.rs  tourrepo.rs
src/tour/: controller.rs  mod.rs  repository.rs
src/tours/: category.rs  handler.rs  mod.rs  repository.rs
