[package]
name = "open_tour_product"
version = "0.1.0"
authors = ["Adam Pothan<apothan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
r2d2-mongodb = "0.2.2"
r2d2 = "0.8.7"
mongodb = "0.3.12"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
futures = "0.1"
